Add Issues and Status sections.  Add favicon.

--- a/srfi-160.html
+++ b/srfi-160.html
@@ -5,6 +5,7 @@
     <title>SRFI 160: Homogeneous numeric vector libraries</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/srfi.css" type="text/css" />
+    <link href="/favicon.png" rel="icon" sizes="192x192" type="image/png" />
   </head>
 
   <body>
@@ -18,6 +19,14 @@ Homogeneous numeric vector libraries
 John Cowan (based on SRFI 4 by Marc Feeley)
 
 <H1>Status</H1>
+
+<p>This SRFI is currently in <em>draft</em> status.  Here is <a href="https://srfi.schemers.org/srfi-process.html">an explanation</a> of each status that a SRFI can hold.  To provide input on this SRFI, please send email to <code><a href="mailto:srfi+minus+160+at+srfi+dotschemers+dot+org">srfi-160@<span class="antispam">nospam</span>srfi.schemers.org</a></code>.  To subscribe to the list, follow <a href="https://srfi.schemers.org/srfi-list-subscribe.html">these instructions</a>.  You can access previous messages via the mailing list <a href="https://srfi-email.schemers.org/srfi-160">archive</a>.</p>
+<ul>
+  <li>Received: 2018/5/20</li>
+  <li>60-day deadline: 2018/7/20</li>
+  <li>Draft #1 published: 2018/8/21</li>
+</ul>
+
 <H1>Abstract</H1>
 
 This SRFI describes a set of datatypes for vectors whose elements are
@@ -28,6 +37,10 @@ An external representation is specified which may be supported by the
 <code>read</code> and <code>write</code> procedures and by the program
 parser (i.e. programs can contain references to literal homogeneous
 vectors).
+
+<H1>Issues</H1>
+
+<p>None at present.</p>
 
 <H1>Rationale</H1>
 
