"a exact" => "an exact"

--- a/srfi-160.html
+++ b/srfi-160.html
@@ -252,7 +252,7 @@ to insert an invalid value into a homogeneous vector.
 
       <dt><i>i, j, start, at</i></dt>
       <dd>
-        Must be a exact nonnegative integer less than the length of the @vector.
+        Must be an exact nonnegative integer less than the length of the @vector.
         In <i>@vector-copy!</i> and <i>reverse-@vector-copy!</i>,
         <i>at</i> refers to the destination and <i>start</i> to the source.
         <br />
