--- a/srfi-160.html
+++ b/srfi-160.html
@@ -586,7 +586,7 @@ types of homogeneous vectors:
 all <code>@vector?</code> procedures return <code>#t</code> on every homogeneous vector type.
 
 <H1>Copyright</H1>
-Copyright &copy; John Cowan 2018.  All Rights Reserved.
+Copyright &copy; John Cowan 2018.
 <p>
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
