Publish second draft.

--- a/srfi-160.html
+++ b/srfi-160.html
@@ -25,6 +25,7 @@ John Cowan (based on SRFI 4 by Marc Feeley)
   <li>Received: 2018/5/20</li>
   <li>60-day deadline: 2018/7/20</li>
   <li>Draft #1 published: 2018/8/21</li>
+  <li>Draft #2 published: 2018/9/2</li>
 </ul>
 
 <H1>Abstract</H1>
