--- a/srfi-160.html
+++ b/srfi-160.html
@@ -191,7 +191,7 @@ types are disjoint from each other and from all other Scheme types.
 
 Each element of a homogeneous vector must be <i>valid</i>.  That is, for an
 integer vector, it must be an exact integer within the
-exclusive range specified above; for a float vector, it must be an
+inclusive range specified above; for a float vector, it must be an
 inexact real number; and for a complex vector, it must be an inexact
 complex number.  It is an error to try to use a constructor or mutator
 to set an element to an invalid value.
@@ -373,6 +373,7 @@ to insert an invalid value into a homogeneous vector.
 
 <p>The procedures shared with SRFI 4 are marked with [SRFI 4].
 The procedures with the same semantics as SRFI 133 are marked with [SRFI 133].
+The procedures analogous to SRFI 152 string procedures are marked with [SRFI 152].
 
 <H3>Constructors</H3>
 
@@ -407,33 +408,6 @@ The procedures with the same semantics as SRFI 133 are marked with [SRFI 133].
 
 <p><code>(@vector= <i>elt=? @vec ...</i>) -> boolean</code> [SRFI 133]</p>
 
-<p>TODO: Consider <code>&lt;</code>, <code>></code>, <code>&lt;=</code>, <code>>=</code>.</li>
-
-<p><code>(@vector-contains <i>@vec1 @vec2</i>) -> index-or-false</code></p>
-
-<p><code>(@vector-contains-right <i>@vec1 @vec2</i>) -> index-or-false</code></p>
-
-<p>If the elements of <i>@vec1</i> are found
-consecutively in the elements of <i>@vec2</i>,
-then the first/last matching index of <i>@vec2</i> is returned;
-otherwise, <code>#f</code> is returned.</p>
-
-<H3>Prefixes and suffixes</H3>
-
-<p><code>(@vector-prefix? <i>@vec1 @vec2</i>) -> boolean</code></p>
-
-<p><code>(@vector-suffix? <i>@vec1 @vec2</i>) -> boolean</code></p>
-
-<p>Returns <code>#t</code> if <i>@vec1</i> is a prefix/suffix of <i>@vec2</i>;
-otherwise returns <code>#f</code>.
-
-<p><code>(@vector-prefix-length? <i>@vec1 @vec2</i>) -> integer</code></p>
-
-<p><code>(@vector-suffix-length? <i>@vec1 @vec2</i>) -> integer</code></p>
-
-<p>Returns the length of the longest common prefix/suffix of <i>@vec1</i>
-and <i>@vec2</i>.</p>
-
 <H3>Selectors</H3>
 
 <p><code>(@vector-ref <i>@vec i</i>) -> value</code> [SRFI 4]</p>
@@ -442,31 +416,31 @@ and <i>@vec2</i>.</p>
 
 <H3>Iteration</H3>
 
-<p><code>(@vector-take <i>@vec n</i>) -> @vector</code>]</p>
+<p><code>(@vector-take <i>@vec n</i>) -> @vector</code>] [SRFI 152]</p>
 
-<p><code>(@vector-take-right <i>@vec n</i>) -> @vector</code> [SRFI 133]</p>
+<p><code>(@vector-take-right <i>@vec n</i>) -> @vector</code> [SRFI 152]</p>
 
 <p>Returns a @vector containing the first/last <i>n</i>
 elements of <i>@vec</i>.</p>
 
-<p><code>(@vector-drop <i>@vec n</i>) -> @vector</code></p>
+<p><code>(@vector-drop <i>@vec n</i>) -> @vector</code> [SRFI 152]</p>
 
-<p><code>(@vector-drop-right <i>@vec n</i>) -> @vector</code></p>
+<p><code>(@vector-drop-right <i>@vec n</i>) -> @vector</code> [SRFI 152]</p>
 
 <p>Returns a @vector containing all except the first/last <i>n</i>
 elements of <i>@vec</i>.</p>
 
-<p><code>(@vector-split-at <i>@vec n</i>) -> @vector and @vector</code></p>
+<p><code>(@vector-split-at <i>@vec n</i>) -> @vector and @vector</code> [SRFI 152]</p>
 
 <p>Returns two values, both @vectors.  The first is the result of
 <code>(@vector-drop <i>@vec n</i>)</code>, and the second is
 the result of <code>(@vector-drop <i>@vec n</i>)</code>.</p>
 
-<p><code>(@vector-segment <i>@vec n</i>) -> list</code></p>
+<p><code>(@vector-segment <i>@vec n</i>) -> list</code> [SRFI 152]</p>
 
 <p>Returns a list of @vectors, each of which contains <i>n</i>
 consecutive elements of <i>@vec</i>.
-The last @vector may be shorter than <i>n</i>.
+The last @vector may be shorter than <i>n</i>.</p>
 
 <p><code>(@vector-fold <i>kons knil @vec<sub>1</sub> @vec<sub>2</sub> ...</i>) -> object</code> [SRFI 133]</p>
 
@@ -484,16 +458,16 @@ The last @vector may be shorter than <i>n</i>.
 
 <H3>Searching</H3>
 
-<p><code>(@vector-take-while <i>@vec pred</i> -> index</code></p>
+<p><code>(@vector-take-while <i>@vec pred</i> -> index</code> [SRFI 152]</p>
 
-<p><code>(@vector-take-while-right <i>@vec pred</i> -> index</code></p>
+<p><code>(@vector-take-while-right <i>@vec pred</i> -> index</code> [SRFI 152]</p>
 
 Returns the longest initial prefix/suffix of @vec such that all its
 elements satisfy <i>pred</i>.</p>
 
-<p><code>(@vector-drop-while <i>@vec pred</i> -> index</code></p>
+<p><code>(@vector-drop-while <i>@vec pred</i> -> index</code> [SRFI 152]</p>
 
-<p><code>(@vector-drop-while-right <i>@vec pred</i> -> index</code></p>
+<p><code>(@vector-drop-while-right <i>@vec pred</i> -> index</code> [SRFI 152]</p>
 
 Drops the longest initial prefix/suffix of @vec such that all its
 elements satisfy <i>pred</i>.</p>
@@ -514,9 +488,11 @@ elements satisfy <i>pred</i>.</p>
 
 <p><code>(@vector-partition <i>pred? @vec</i>) -> @vector and integer</code> [SRFI 133]</p>
 
-<p><code>(@vector-filter <i>pred? @vec</i> -> @vector</code></p>
+<p><code>(@vector-skip <i>pred? @vec<sub>1</sub> @vec<sub>2</sub> ...</i>) -> exact nonnegative integer or #f</code> [SRFI 133]</p>
 
-<p><code>(@vector-remove <i>pred? @vec</i> -> @vector</code></p>
+<p><code>(@vector-filter <i>pred? @vec</i> -> @vector</code> [SRFI 152]</p>
+
+<p><code>(@vector-remove <i>pred? @vec</i> -> @vector</code> [SRFI 152]</p>
 
 <p>Return a @vector containing the elements of @vec that satisfy / do not satisfy
 <i>pred?</i>.
@@ -556,8 +532,6 @@ elements satisfy <i>pred</i>.</p>
 <p><code>(vector->@vector <i>vec</i>) -> @vector</code></p>
 
 <p>Returns a homogeneous vector with the same elements as <code><i>vec</i></code>.</p>
-
-<p>TODO: conversion to and from hex strings.</p>
 
 <H2>Optional lexical syntax</H2>
 
@@ -609,14 +583,18 @@ systems that use the <code>read</code> procedure to parse programs.
 
 <H2>Packaging</H2>
 
-This SRFI is packaged as thirteen libraries named <code>(srfi
+<p>This SRFI is packaged as thirteen libraries named <code>(srfi
 160 @)</code>, or <code>(srfi :160 @)</code> in R6RS systems, on the
 assumption that most programs will use only a few homogeneous vector
 types.  There is also a SRFI 4 library named <code>(srfi 4)</code>,
 or <code>(srfi :4)</code> in R6RS systems, which implements SRFI 4
 on top of R6RS bytevectors.  Lastly, a <code>(r6rs bytevector)</code>
-library is provided for R7RS systems.
-
+library is provided for R7RS systems;
+it exports the same identifiers with the same meanings as the R6RS
+standard library <code>(rnrs bytevectors (6))</code>, except that
+because that library's definition of <code>bytevector-copy!</code>
+conflicts with R7RS, it is exported as <code>r6rs:bytevector-copy!</code>.
+This is the same convention that Larceny uses.</p>
 
 <H1>Implementation</H1>
 
@@ -637,12 +615,9 @@ with 64-bit floating point numbers).</p>
 It is constructed in three layers.  The lowest layer is a portable
 implementation of the R6RS bytevector library.  So that it can be
 run and tested on R6RS systems, it is named <code>(r6rs bytevectors)</code>
-rather than <code>(rnrs bytevectors (6))</code>.  Because the R6RS and
-R7RS definitions of <code>bytevector-copy!</code> are different, this
-library exports its definition using the name <code>r6rs:bytevector-copy!</code>.
-This is the same convention adopted by Larceny.</p>
+rather than <code>(rnrs bytevectors (6))</code>.</p>
 
-<p>This implementation does not handle denormalized IEEE numbers correctly.
+<p><b>WARNING:</b>This implementation does not handle denormalized IEEE numbers correctly.
 Therefore, the procedures
 <code>bytevector-ieee-single-native-ref</code>,
 <code>bytevector-ieee-double-native-ref</code>,
@@ -707,6 +682,9 @@ complex vectors will still be required.
 <p>The following files are provided for this layer:</p>
 
 <ul>
+<li><code>srfi/4-impl.scm</code> - implementation of SRFI 4 procedures
+using bytevector library.</li>
+
 <li><code>srfi/4-vec.scm</code> - implementation of SRFI 4 procedures
 using heterogeneous vectors.</li>
 
@@ -730,13 +708,12 @@ using heterogeneous vectors.</li>
 <li><code>srfi.160.at.scm</code> - Chicken libraries on top of native Chicken SRFI 4</li>
 
 <li><code>srfi/:160/at.scm</code> - Guile libraries on top of native Guile SRFI 4.
-Can be adapted to any R6RS system that provides <code>include</code> and SRFI 4.</li>
+Can be adapted to any R6RS system that provides <code>include</code>.</li>
 
 <li><code>srfi/160/at.scm</code> - Chibi libraries on top of SRFI 4.
 Can be adapted to any R7RS system.</li>
 
-<li><code>srfi/160/at-impl.scm</code> - Shared implementation.</li>
-<li><code>srfi/at-impl.scm</code> - implementation of non-SRFI 4 procedures</li>
+<li><code>srfi/160/at-impl.scm</code> - Shared implementation of non-SRFI 4 procedures.</li>
 
 <li><code>atexpander.sh</code> - a trivial shell script using <code>sed</code>
 to expand files into their variants</li>
