Publish third draft.

--- a/srfi-160.html
+++ b/srfi-160.html
@@ -26,6 +26,7 @@ John Cowan (based on SRFI 4 by Marc Feeley)
   <li>60-day deadline: 2018/7/20</li>
   <li>Draft #1 published: 2018/8/21</li>
   <li>Draft #2 published: 2018/9/2</li>
+  <li>Draft #3 published: 2018/9/8</li>
 </ul>
 
 <H1>Abstract</H1>
